--- a/app/src/main/res/layout/state_content_acclaim.xml
+++ b/app/src/main/res/layout/state_content_acclaim.xml
@@ -52,7 +52,7 @@
 
                     <!-- view pager title strip -->
 <!--
-                    <de.mayflower.picfood.ui.viewpagerindicator.PicFoodTitlePageIndicator
+                    <de.mayflower.antipatterns.ui.viewpagerindicator.AntiPatternsTitlePageIndicator
                         android:id="@+id/acclaim_view_pager_title_strip"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
