--- a/app/src/main/res/menu/menu_test.xml
+++ b/app/src/main/res/menu/menu_test.xml
@@ -6,6 +6,7 @@
         android:id="@+id/menu_test1"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/appname"/>
+        android:title="@string/appname"
+    />
 
 </menu>
