Fixed minor issues.

--- a/app/src/main/res/values/antipatterns.xml
+++ b/app/src/main/res/values/antipatterns.xml
@@ -4,7 +4,7 @@
 
     <string-array name="antipattern_all">
         <item>rds</item>
-        <item>eus/item>
+        <item>eus</item>
         <item>dvs</item>
         <item>smf</item>
     </string-array>
