Minor bugfixed and coding style improvements.

--- a/app/src/main/res/layout/antipatterns_list_item.xml
+++ b/app/src/main/res/layout/antipatterns_list_item.xml
@@ -13,12 +13,13 @@
 
     <!-- text -->
     <include
-        android:id="@+id/text_find_friends"
+        android:id="@+id/text_item_title"
         layout="@layout/text_item"
         android:layout_width="0.0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1.0"
         android:layout_marginLeft="@dimen/item_padding_left"
+        android:layout_marginRight="@dimen/item_padding_right"
         />
 
     <!-- right arrow -->
