--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -5,11 +5,58 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height"
-    android:orientation="horizontal"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:gravity="left|center_vertical"
     android:baselineAligned="false"
     android:background="@color/item_bg_select"
     >
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/detail_view_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_profile"
+            android:textSize="@dimen/text_profile"
+            android:includeFontPadding="true"
+            android:lineSpacingMultiplier="1.0"
+            android:fadingEdge="none"
+            android:layout_gravity="left|top"
+
+            android:singleLine="false"
+            android:maxLines="3"
+
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal">
+
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/detail_view_explanation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_profile"
+            android:textSize="@dimen/text_profile"
+            android:includeFontPadding="true"
+            android:lineSpacingMultiplier="1.0"
+            android:fadingEdge="none"
+            android:layout_gravity="left|top"
+
+            android:singleLine="false"
+            android:maxLines="3"
+
+            />
+    </LinearLayout>
 </LinearLayout>
