--- a/app/src/main/res/layout/antipatterns_main_screen.xml
+++ b/app/src/main/res/layout/antipatterns_main_screen.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_screen_pager"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_screen"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="left|top"
+    android:background="@color/project_fg"
+    >
 
-    <android.support.v4.view.PagerTabStrip
-        android:id="@+id/main_screen_pager_tab_strip"
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/main_screen_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:background="#33b5e5"
-        android:textColor="#fff"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp" />
+        android:layout_height="match_parent"
+        android:background="@color/screen_bg"
+        >
 
-</android.support.v4.view.ViewPager>
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/main_screen_pager_tab_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="#33b5e5"
+            android:textColor="#fff"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp" />
+
+    </android.support.v4.view.ViewPager>
+
+</LinearLayout>
