--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -40,11 +40,11 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal">
+        android:layout_gravity="bottom|center_vertical">
 
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/detail_view_explanation"
+            android:id="@+id/detail_view_symptomtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/text_profile"
@@ -57,6 +57,51 @@
             android:singleLine="false"
             android:maxLines="3"
 
+            android:text="Kennst Du das?" />
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/detail_view_symptoms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_profile"
+            android:textSize="@dimen/text_profile"
+            android:includeFontPadding="true"
+            android:lineSpacingMultiplier="1.0"
+            android:fadingEdge="none"
+            android:layout_gravity="left|top"
+
+            android:singleLine="false"
+            android:maxLines="3"
             />
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/detail_view_remedytitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_profile"
+            android:textSize="@dimen/text_profile"
+            android:includeFontPadding="true"
+            android:lineSpacingMultiplier="1.0"
+            android:fadingEdge="none"
+            android:layout_gravity="left|top"
+
+            android:singleLine="false"
+            android:maxLines="3"
+            android:text="So wird es besser" />
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/detail_view_remedies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_profile"
+            android:textSize="@dimen/text_profile"
+            android:includeFontPadding="true"
+            android:lineSpacingMultiplier="1.0"
+            android:fadingEdge="none"
+            android:layout_gravity="left|top"
+
+            android:singleLine="false"
+            android:maxLines="3"
+        />
     </LinearLayout>
 </LinearLayout>
