--- a/app/src/main/res/layout/antipatterns_main_screen.xml
+++ b/app/src/main/res/layout/antipatterns_main_screen.xml
@@ -3,11 +3,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_screen"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:gravity="left|top"
-    android:background="@color/project_fg"
+    android:background="@color/screen_bg"
     >
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
