--- a/app/src/main/res/layout/antipatterns_main_screen_view_pager_fragment.xml
+++ b/app/src/main/res/layout/antipatterns_main_screen_view_pager_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="left|top"
-    android:background="@color/project_fg"
+    android:background="@color/screen_bg"
     >
 
     <ScrollView
