--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:gravity="left|center_vertical"
     android:baselineAligned="false"
-    android:background="@color/item_bg_select"
+    android:background="@color/screen_bg"
     >
 
     <LinearLayout
@@ -18,13 +18,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
 
+
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/detail_view_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_profile"
-            android:textSize="@dimen/text_profile"
+            android:textColor="@color/text_item"
+            android:textSize="@dimen/text_item_caption"
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
@@ -47,8 +48,8 @@
             android:id="@+id/detail_view_symptomtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_profile"
-            android:textSize="@dimen/text_profile"
+            android:textColor="@color/text_item"
+            android:textSize="@dimen/text_item_caption"
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
@@ -63,7 +64,7 @@
             android:id="@+id/detail_view_symptoms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_profile"
+            android:textColor="@color/text_item"
             android:textSize="@dimen/text_profile"
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
@@ -78,8 +79,8 @@
             android:id="@+id/detail_view_remedytitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_profile"
-            android:textSize="@dimen/text_profile"
+            android:textColor="@color/text_item"
+            android:textSize="@dimen/text_item_caption"
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
@@ -93,7 +94,7 @@
             android:id="@+id/detail_view_remedies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_profile"
+            android:textColor="@color/text_item"
             android:textSize="@dimen/text_profile"
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
