--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -29,7 +29,7 @@
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
-            android:layout_gravity="left|top"
+            android:layout_gravity="top|center_vertical"
 
             android:singleLine="false"
             android:maxLines="3"
@@ -53,7 +53,7 @@
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
-            android:layout_gravity="left|top"
+            android:layout_gravity="top|center_vertical"
 
             android:singleLine="false"
             android:maxLines="3"
@@ -69,7 +69,7 @@
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
-            android:layout_gravity="left|top"
+            android:layout_gravity="top|left"
 
             android:singleLine="false"
             android:maxLines="3"
@@ -84,7 +84,7 @@
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
-            android:layout_gravity="left|top"
+            android:layout_gravity="top|center_vertical"
 
             android:singleLine="false"
             android:maxLines="3"
