--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -4,105 +4,73 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_item"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="left|center_vertical"
     android:baselineAligned="false"
     android:background="@color/screen_bg"
     >
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
 
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/detail_view_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_item"
-            android:textSize="@dimen/text_item_caption"
+            android:layout_width="fill_parent"
+            android:layout_height="200.0dp"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:textSize="30.0dp"
             android:includeFontPadding="true"
             android:lineSpacingMultiplier="1.0"
             android:fadingEdge="none"
-            android:layout_gravity="top|center_vertical"
-
+            android:gravity="center"
             android:singleLine="false"
             android:maxLines="3"
-
+            android:background="@color/project_purple"
             />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_vertical">
+        android:layout_gravity="bottom|center_vertical"
+        android:padding="20dp">
 
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/detail_view_symptomtitle"
-            android:layout_width="match_parent"
+            android:theme="@style/DetailScreenSubHeadline"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_item"
-            android:textSize="@dimen/text_item_caption"
-            android:includeFontPadding="true"
-            android:lineSpacingMultiplier="1.0"
-            android:fadingEdge="none"
-            android:layout_gravity="top|center_vertical"
-
-            android:singleLine="false"
-            android:maxLines="3"
 
             android:text="Kennst Du das?" />
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/detail_view_symptoms"
-            android:layout_width="match_parent"
+            android:theme="@style/DetailScreenSubText"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_item"
-            android:textSize="@dimen/text_profile"
-            android:includeFontPadding="true"
-            android:lineSpacingMultiplier="1.0"
-            android:fadingEdge="none"
-            android:layout_gravity="top|left"
-
-            android:singleLine="false"
-            android:maxLines="3"
             />
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
+            android:theme="@style/DetailScreenSubHeadline"
             android:id="@+id/detail_view_remedytitle"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_item"
-            android:textSize="@dimen/text_item_caption"
-            android:includeFontPadding="true"
-            android:lineSpacingMultiplier="1.0"
-            android:fadingEdge="none"
-            android:layout_gravity="top|center_vertical"
 
-            android:singleLine="false"
-            android:maxLines="3"
             android:text="So wird es besser" />
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/detail_view_remedies"
+            android:theme="@style/DetailScreenSubText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_item"
-            android:textSize="@dimen/text_profile"
-            android:includeFontPadding="true"
-            android:lineSpacingMultiplier="1.0"
-            android:fadingEdge="none"
-            android:layout_gravity="left|top"
-
-            android:singleLine="false"
-            android:maxLines="3"
         />
     </LinearLayout>
 </LinearLayout>
