--- a/app/src/main/res/layout/antipatterns_main_screen.xml
+++ b/app/src/main/res/layout/antipatterns_main_screen.xml
@@ -21,10 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="#33b5e5"
+            android:background="@color/project_purple"
             android:textColor="#fff"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp" />
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp" />
 
     </android.support.v4.view.ViewPager>
 
