--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -16,7 +16,7 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
-    <style name="DetailScreenSubText">
+    <style name="DetailScreenSubItem">
         <item name="android:textColor">@color/text_item</item>
         <item name="android:textSize">20dp</item>
         <item name="android:includeFontPadding">true</item>
