Adds layout for detail-view and dummy-click-areas for counter

--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -12,6 +12,8 @@
     >
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:custom="http://schemas.android.com/apk/res/de.mayflower.antipatterns"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -33,51 +35,83 @@
             android:maxLines="3"
             android:background="@color/project_purple"
             />
-    </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_vertical"
-        android:padding="20dp">
-
-        <TextView
+        <de.mayflower.antipatterns.CircleView
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/detail_view_symptomtitle"
-            android:theme="@style/DetailScreenSubHeadline"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:text="Kennst Du das?" />
-
-        <ListView
-            android:id="@+id/detail_view_symptoms_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ListView>
-
-        <TextView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/detail_view_symptoms"
-            android:theme="@style/DetailScreenSubItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_marginTop="-30pt"
+            android:layout_width="60pt"
+            android:layout_height="60pt"
+            android:text="5"
+            android:textSize="20pt"
+            android:textColor="@android:color/black"
+            custom:circle_color="@android:color/white"
+            custom:border_color="@color/project_purple"
+            custom:border_width="1pt"
             />
-        <TextView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:theme="@style/DetailScreenSubHeadline"
-            android:id="@+id/detail_view_remedytitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
 
-            android:text="So wird es besser" />
-        <TextView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/detail_view_remedies"
-            android:theme="@style/DetailScreenSubItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-        />
+        <de.mayflower.antipatterns.CircleView
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_marginTop="-45pt"
+            android:layout_marginRight="50pt"
+            android:layout_width="30pt"
+            android:layout_height="30pt"
+            android:text="+"
+            android:textSize="10pt"
+            android:textColor="@android:color/black"
+            custom:circle_color="@android:color/white"
+            custom:border_color="@color/project_purple"
+            custom:border_width="1pt"
+            />
+
     </LinearLayout>
+
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/detail_view_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="0pt">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center_vertical"
+            android:paddingLeft="10pt"
+            android:paddingRight="10pt">
+            <TextView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/detail_view_symptomtitle"
+                android:theme="@style/DetailScreenSubHeadline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Kennst Du das?"
+                />
+
+            <LinearLayout
+                android:id="@+id/detail_view_symptoms_list"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <TextView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:theme="@style/DetailScreenSubHeadline"
+                android:id="@+id/detail_view_remedytitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="So wird es besser"
+                />
+
+            <LinearLayout
+                android:id="@+id/detail_view_remedies_list"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
