--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -18,7 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/detail_view_title"
@@ -36,22 +35,20 @@
             android:background="@color/project_purple"
             />
 
-        <de.mayflower.antipatterns.CircleView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <TextView
+            android:id="@+id/detail_view_display_counter"
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginTop="-30pt"
             android:layout_width="60pt"
             android:layout_height="60pt"
-            android:text="5"
             android:textSize="20pt"
             android:textColor="@android:color/black"
-            custom:circle_color="@android:color/white"
-            custom:border_color="@color/project_purple"
-            custom:border_width="1pt"
+            android:background="@drawable/rounded_button_normal"
             />
 
-        <de.mayflower.antipatterns.CircleView
+        <Button
+            android:id="@+id/detail_view_increment_counter"
             android:gravity="center"
             android:layout_gravity="center"
             android:layout_marginTop="-45pt"
@@ -60,10 +57,8 @@
             android:layout_height="30pt"
             android:text="+"
             android:textSize="10pt"
-            android:textColor="@android:color/black"
-            custom:circle_color="@android:color/white"
-            custom:border_color="@color/project_purple"
-            custom:border_width="1pt"
+            android:textColor="@drawable/selector_rounded_button_text_color"
+            android:background="@drawable/selector_rounded_button_background"
             />
 
     </LinearLayout>
