--- a/app/src/main/res/layout/antipatterns_detail_screen.xml
+++ b/app/src/main/res/layout/antipatterns_detail_screen.xml
@@ -79,10 +79,21 @@
             <TextView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/detail_view_symptomtitle"
-                android:theme="@style/DetailScreenSubHeadline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kennst Du das?"
+                android:textColor="@color/text_item"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:includeFontPadding="true"
+                android:lineSpacingMultiplier="1.0"
+                android:fadingEdge="none"
+                android:layout_gravity="center_horizontal"
+                android:singleLine="false"
+                android:maxLines="3"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:gravity="center_horizontal"
                 />
 
             <LinearLayout
@@ -94,11 +105,22 @@
 
             <TextView
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:theme="@style/DetailScreenSubHeadline"
                 android:id="@+id/detail_view_remedytitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="So wird es besser"
+                android:textColor="@color/text_item"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:includeFontPadding="true"
+                android:lineSpacingMultiplier="1.0"
+                android:fadingEdge="none"
+                android:layout_gravity="center_horizontal"
+                android:singleLine="false"
+                android:maxLines="3"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:gravity="center_horizontal"
                 />
 
             <LinearLayout
