--- a/app/src/main/res/layout/detail_view_list_item.xml
+++ b/app/src/main/res/layout/detail_view_list_item.xml
@@ -2,5 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/DetailScreenSubItem"
+    android:textColor="@color/text_item"
+    android:textSize="20dp"
+    android:includeFontPadding="true"
+    android:lineSpacingMultiplier="1.0"
+    android:fadingEdge="none"
+    android:gravity="center"
+    android:paddingBottom="10dp"
+    android:singleLine="false"
     />
